- Adding tags to the posts listings and views.. yes i like to tag my posts - ".aligncenter" CSS rule was missing, fixed that - Removed sidebar.php, it seems it's no longer used in WP3

--- a/style.css
+++ b/style.css
@@ -132,3 +132,4 @@ h3 #searchresults {color:#FF000A;}
 
 /* IMAGES */
 img.centered {display: block;margin-left: auto;margin-right: auto;}img.alignright {padding: 4px;margin: 0 0 2px 7px;display: inline;}img.alignleft {padding: 4px;margin: 0 7px 2px 0;display: inline;}.alignright {float: right;}.alignleft {float: left;}
+.aligncenter { margin: 0 auto; }
